e2e/calico/bgpconfiguration-default.yaml
apiVersion: crd.projectcalico.org/v1
kind: BGPConfiguration
metadata:
  name: default
spec:
  logSeverityScreen: Info
  nodeToNodeMeshEnabled: false
  asNumber: 65170
  listenPort: 178
  bindMode: NodeIP
