e2e/calico/bgppeer-hbn-ipv4.yaml
apiVersion: crd.projectcalico.org/v1
kind: BGPPeer
metadata:
  name: hbn-ipv4
spec:
  peerIP: '169.254.100.100'
  asNumber: 65169
