e2e/calico/bgppeer-hbn-ipv6.yaml
apiVersion: crd.projectcalico.org/v1
kind: BGPPeer
metadata:
  name: hbn-ipv6
spec:
  peerIP: 'fd00:7:caa5:1::'
  asNumber: 65169
