e2e/calico/felixconfiguration-default.yaml
apiVersion: crd.projectcalico.org/v1
kind: FelixConfiguration
metadata:
  name: default
spec:
  bpfEnabled: false
  ipipEnabled: false
  ipv6Support: true
  mtuIfacePattern: "hbn"
