e2e/calico/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
  - https://raw.githubusercontent.com/projectcalico/calico/v3.29.3/manifests/calico.yaml
  - bgppeer-hbn-ipv4.yaml
  - bgppeer-hbn-ipv6.yaml
  - bgpconfiguration-default.yaml
  - ippool-default-ipv4.yaml
  - ippool-default-ipv6.yaml
  - felixconfiguration-default.yaml
patches:
  - path: patch-calico-config.yaml
  - path: patch-calico-node-env.yaml
    target:
      kind: DaemonSet
      name: calico-node
      namespace: kube-system
